# banksystem

./: .gitignore  CMakeLists.txt  CheckingAccount.cpp  Manager.cpp  README.md  bank.cpp  bank0.cpp  businessUser.cpp  displayAccount.cpp  functions.cpp  hello.cpp  lience.txt  main.cpp  menu.cpp  package-lock.json  package.json  personalUser.cpp  studentUser.cpp  tempCodeRunnerFile.cpp
Views/: package-lock.json  package.json  webpack.config.js
Views/public/: index.html
Views/src/: App.js  LoginPage.jsx  LoginSignupPage.jsx  SignupPage.jsx  UserTypePage.jsx  index.js
Views/src/ProfileDashboardPages/: Accounts.jsx  Notification.jsx  ProfileDashboard.jsx  Transaction.jsx  WithDepo.jsx
Views/src/css/: style.css
include/: Account.h  AdminUser.h  CheckingAccount.h  CreditAccount.h  Manager.h  SavingAccount.h  Transactions.h  User.h  businessUser.h  functions.h  inputHandler.h  menu.h  personalUser.h  studentUser.h
include/controllers/: AccountCreate.h  AccountSearch.h  Transaction.h  WithDepo.h  login.h  signup.h
include/models/: AccountModel.h  TransactionModel.h  userModel.h
src/: AdminUser.cpp  CheckingAccount.cpp  CreditAccount.cpp  Manager.cpp  SavingAccount.cpp  Transactions.cpp  businessUser.cpp  functions.cpp  inputHandler.cpp  main.cpp  menu.cpp  personalUser.cpp  studentUser.cpp
src/controllers/: AccountCreateController.cpp  AccountSearchController.cpp  TransactionController.cpp  WithDepoController.cpp  logginController.cpp  signupController.cpp
